--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "lodash-id": "^0.14.0",
     "lowdb": "^1.0.0",
     "moment": "^2.24.0",
+    "mysql": "^2.17.1",
     "normalize.css": "^8.0.1",
     "reset-css": "^4.0.1",
     "socket.io-client": "^2.3.0",
