调整外屏展示成4列，修复卡片颜色问题，优化定时器问题，修复宽度错乱问题

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kds-desktop",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "author": "",
   "description": "An electron-vue project",
   "license": null,
@@ -19,7 +19,11 @@
   },
   "build": {
     "productName": "KDS后厨系统",
-    "appId": "com.uniecloud.desktop",
+    "appId": "com.kds.desktop",
+    "nsis": {
+      "oneClick": false,
+      "allowToChangeInstallationDirectory": true
+    },
     "directories": {
       "output": "build"
     },
