--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "kds-desktop",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "author": "",
   "description": "An electron-vue project",
   "license": null,
   "main": "./dist/electron/main.js",
   "scripts": {
     "build": "node .electron-vue/build.js && electron-builder",
-    "build:dist": "node .electron-vue/build.js && electron-builder --publish onTagOrDraft",
+    "build:dist": "node .electron-vue/build.js && electron-builder --publish onTagOrDraft --ia32",
     "build:dir": "node .electron-vue/build.js && electron-builder --dir",
     "build:clean": "cross-env BUILD_TARGET=clean node .electron-vue/build.js",
     "build:web": "cross-env BUILD_TARGET=web node .electron-vue/build.js",
