--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "main": "./dist/electron/main.js",
   "scripts": {
     "build": "node .electron-vue/build.js && electron-builder",
-    "build:dist": "node .electron-vue/build.js && electron-builder --publish onTagOrDraft --ia32",
+    "build:dist": "node .electron-vue/build.js && electron-builder --publish always --ia32",
     "build:dir": "node .electron-vue/build.js && electron-builder --dir",
     "build:clean": "cross-env BUILD_TARGET=clean node .electron-vue/build.js",
     "build:web": "cross-env BUILD_TARGET=web node .electron-vue/build.js",
